--- a/HaarlemFestival/Views/Dinner/Restaurant.cshtml
+++ b/HaarlemFestival/Views/Dinner/Restaurant.cshtml
@@ -11,7 +11,31 @@
     </div>
 
     <div class="right_box">
-        <img src="dummie " alt="Ewa" />
+            <label class="lrating">
+                @for (int i = 0; i < Model.Rating; i++)
+                {
+                    <img class="rating" src="~/img/Dinner/Summary/Rating_full.png" width="14" height="17" />
+                }
+
+                @for (int i = Model.Rating; i < 5; i++)
+                {
+                    <img class="rating" src="~/img/Dinner/Summary/Rating_empty.png" width="14" height="17" />
+                }
+            </label>
+        <label class="lprice">Price</label>
+        <label class="lprice">Cuisine</label>
+        @foreach (var item in Model.Cuisines)
+        {
+            <h6>@Model.Cuisines</h6>
+        }
+        <label class="lprice">Timeslots</label>
+        <h6>@Model.Timeslots[0].StartTime.ToShortTimeString() - @Model.Timeslots[0].StartTime.ToShortTimeString()</h6>
+        <label class="lprice">Adres</label>
+        <h6>@Model.Location.Street @Model.Location.StreetNr, @Model.Location.ZipCode @Model.Location.City </h6>
+
+
+        
+        
     </div>
 </div>
 
