--- a/HaarlemFestival/Views/Agenda/Index.cshtml
+++ b/HaarlemFestival/Views/Agenda/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model HaarlemFestival.Model.PagePlusOrders
+﻿@model HaarlemFestival.Model.PagePlusOrdersPlusOrderLocation
 @using HaarlemFestival.Model
+
 @section AddToHead{
     <link href="@Url.Content("~/Content/Agenda.css")" rel="stylesheet" type="text/css" />
 }
+
 @{
     ViewBag.Title = "Index";
 }
@@ -21,7 +23,6 @@
 <section class="AgendaOrders">
     <ul class="AgendaOrderList">
         <li class="OrderHeader">
-            @*<div class="orderItem col-md-1">Id</div>*@
             <div class="orderItem col-md-4">Name</div>
             <div class="orderItem col-md-2">Event</div>
             <div class="orderItem col-md-1">Prijs</div>
@@ -38,7 +39,6 @@
                 
 
         <li class="AgendaOrder">
-            @*<div class="orderItem col-md-1">@OHT.Ticket_TimeSlot_Activity_Id</div>*@
             <div class="orderItem col-md-4">@OHT.Ticket.TimeSlot.Activity.Name</div>
             <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.Activity.Type</div>
             <div class="orderItem col-md-1">@OHT.Ticket.Price</div>
@@ -81,33 +81,12 @@
             foreach (OrderHasTickets OHT in order.OrderHasTickets)
             {
 
-                int aantaldagen = 0;
-
-                if (OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Thursday)
-                {
-                    aantaldagen = 0;
-                }
-                else if (OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Friday)
-                {
-                    aantaldagen = 1;
-                }
-                else if (OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Saturday)
-                {
-                    aantaldagen = 2;
-                }
-                else if (OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Sunday)
-                {
-                    aantaldagen = 3;
-                }
-
-
-
                 <div class="AgendaItem"
                      style="
                  position: absolute;
-                 left: calc( 2.2% + 7.35% * ( @OHT.Ticket.TimeSlot.StartTime.Hour - 10 ) + @OHT.Ticket.TimeSlot.StartTime.Minute * 0.12375% );
-                 bottom: calc( 64.2% - 20% *  @aantaldagen  );
-                 width: calc( 7.35% * ( @OHT.Ticket.TimeSlot.EndTime.Hour - @OHT.Ticket.TimeSlot.StartTime.Hour ) + ( 0.12375% * ( @OHT.Ticket.TimeSlot.EndTime.Minute - @OHT.Ticket.TimeSlot.StartTime.Minute ) ) );
+                 left: @Model.orderLoctions.Where(l => l.id == OHT.Ticket_TimeSlot_Activity_Id).SingleOrDefault().left.ToString().Replace(",", ".")%;
+                 bottom: @Model.orderLoctions.Where(l => l.id == OHT.Ticket_TimeSlot_Activity_Id).SingleOrDefault().bottom.ToString().Replace(",", ".")%;
+                 width: @Model.orderLoctions.Where(l => l.id == OHT.Ticket_TimeSlot_Activity_Id).SingleOrDefault().width.ToString().Replace(",", ".")%;
                  z-index: @OHT.Ticket_TimeSlot_Activity_Id;
                  ">
 
@@ -124,65 +103,6 @@
 
     </section>
 
-
-
-
-
-
-
-
-
-    @*<section class="AgendaRaster">
-        <img class="AgendaFoto" src="@Model.Page.PageDescriptions[0].ImageUrl" alt="agenda" />
-       
-        
-    @foreach (Order order in Model.Orders)
-    {
-        foreach (OrderHasTickets OHT in order.OrderHasTickets)
-        {
-           
-            int aantaldagen = 0;
-
-            if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Thursday)
-            {
-                aantaldagen = 0;
-            }
-            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Friday)
-            {
-                aantaldagen = 1;
-            }
-            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Saturday)
-            {
-                aantaldagen = 2;
-            }
-            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Sunday)
-            {
-                aantaldagen = 3;
-            }
-
-
-
-        <div class="AgendaItem" 
-                 style="
-                 position: absolute;
-                 left: calc( 29.1% + 3.78% * ( @OHT.Ticket.TimeSlot.StartTime.Hour - 10 ) + @OHT.Ticket.TimeSlot.StartTime.Minute * 0.0629166666666667% ); 
-                 bottom: calc( 37.8% - 7.4% *  @aantaldagen  );
-                 width: calc( 3.78% * ( @OHT.Ticket.TimeSlot.EndTime.Hour - @OHT.Ticket.TimeSlot.StartTime.Hour ) + ( 0.0629166666666667% * ( @OHT.Ticket.TimeSlot.EndTime.Minute - @OHT.Ticket.TimeSlot.StartTime.Minute ) ) ); 
-                 z-index: @OHT.Ticket_TimeSlot_Activity_Id;
-                 ">
-
-            <h2 class="AgendaItemEvent">@OHT.Ticket.TimeSlot.Activity.Type</h2>
-
-            <h2 class="AgendaItemAantal">Tickets: @OHT.Amount</h2>
-
-            <h2 class="AgendaItemName">@OHT.Ticket.TimeSlot.Activity.Name</h2>
-
-        </div>
-
-        }
-    }
-
-    </section>*@
 
 </section>
 
