--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -28,11 +28,16 @@
     <section class="jazz_page_program_days">
         <h3 class="jazz_page_program_days_header">@Model.Page.PageDescriptions[3].Title</h3>
 
-        <button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1" onclick="location.href='@Url.Action("Index", "Jazz", new { id=1})'">@Model.Page.PageDescriptions[4].Title<br />@Model.Page.PageDescriptions[4].DescriptionText</button>
+        @Html.ActionLink("Thursday", "Index", "Jazz", new { id=1}, new { @class = "btn btn-default jazz_page_program_thursday" });
+        @Html.ActionLink("Friday", "Index", "Jazz", new { id = 2 }, new { @class = "btn btn-default jazz_page_program_friday" });
+        @Html.ActionLink("Saturday", "Index", "Jazz", new { id = 3 }, new { @class = "btn btn-default jazz_page_program_saturday" });
+        @Html.ActionLink("Sunday", "Index", "Jazz", new { id = 4 }, new { @class = "btn btn-default jazz_page_program_sunday" });
+
+        @*<button name="thursday" type="submit" class="jazz_page_program_thursday" tabindex="1" onclick="location.href='@Url.Action("Index", "Jazz", new { id=1})'">@Model.Page.PageDescriptions[4].Title<br />@Model.Page.PageDescriptions[4].DescriptionText</button>
         <button name="friday" type="submit" class="jazz_page_program_friday" tabindex="2" onclick="location.href='@Url.Action("Index", "Jazz", new { id=2})'">@Model.Page.PageDescriptions[5].Title<br />@Model.Page.PageDescriptions[5].DescriptionText</button>
         <button name="saturday" type="submit" class="jazz_page_program_saturday" tabindex="3" onclick="location.href='@Url.Action("Index", "Jazz", new { id=3})'">@Model.Page.PageDescriptions[6].Title<br />@Model.Page.PageDescriptions[6].DescriptionText</button>
         <button name="sunday" type="submit" class="jazz_page_program_sunday" tabindex="4" onclick="location.href='@Url.Action("Index", "Jazz", new { id=4})'">@Model.Page.PageDescriptions[7].Title<br />@Model.Page.PageDescriptions[7].DescriptionText</button>
-        
+        *@
         <button name="passpartout" type="submit" class="jazz_page_program_passpartout" tabindex="5">@Model.Page.PageDescriptions[8].Title</button>
     </section>
 
@@ -76,7 +81,8 @@
             <p class="modaldatum">6</p>
             <label>Aantal</label>
             <input type="text" class="jazz_order_aantal"/>
-            @Html.ActionLink("Home", "Index", "Home", new { activityId = "a", timeslot = "b", tickettype = 0, aantal = "d", totaalprijs = "e"}, new { @class="jazz_order_btn"})
+            <a href="#" id="jazz_order_btn" class="jjazz_order_btn">link</a>
+            @Html.ActionLink("Home", "Order", "CheckOut", new { activityId = "activityid", timeslot = "timeslot", tickettype = 0, aantal = "aantal", totaalprijs = "totaalprijs" }, new { @class="jazz_order_btn"})
         </section>
 
     </section>
