--- a/HaarlemFestival/Views/Talking/Index.cshtml
+++ b/HaarlemFestival/Views/Talking/Index.cshtml
@@ -119,7 +119,8 @@
 
 
         <input type="text" class="TalkingOrderAantal" />
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" class="TalkingOrderButton" />
+        
 
     </section>
 
