--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -8,77 +8,78 @@
 }
 
 @section AddToScripts{
-<script src="@Url.Content("~/Scripts/FilterOnCuisine.js")"></script>
+    <script src="@Url.Content("~/Scripts/FilterOnCuisine.js")"></script>
 }
 
-<h1>@Model.Page.Name</h1>
+<section class="dinner_introduction">
+    <h1>@Model.Page.Name</h1>
+    <p>@Model.Page.PageDescriptions[1].DescriptionText</p>
+</section>
+
 <aside class="filter">
     <h3>@Model.Page.PageDescriptions[0].Title</h3>
-    <input type="radio" id ="radioFilter0" name="cuisineFilter" checked> All(@Model.Activities.Count())
-    @*var model = @Html.Raw(Json.Encode(Model.Cuisines));*@
-@{int index = 1; }
+
+
+    <input type="radio" id="radioFilter0" name="cuisineFilter" checked>
+    <label for="radioFilter0">All(@Model.Activities.Count())</label>
+
+    @{int index = 1; }
     @foreach (Cuisine cuisine in Model.Cuisines)
     {
+        <input type="radio" id="radioFilter@(index)" name="cuisineFilter">
+        <label for="radioFilter@(index)">@cuisine.Name (@cuisine.Activities.Count())</label>
 
-        <input type="radio" id ="radioFilter@(index)" name="cuisineFilter"> @cuisine.Name @:(@cuisine.Activities.Count())
         index++;
     }
+
+
 </aside>
 
 <!--Pagedescriptions van activities begint op 2 -->
 @{int counter = 2; }
 @{int id = 1; }
 
-@*<script>
-    var ActivityListJson = @Html.Raw(Json.Encode(Model.Activities));
-</script>*@
 
 @foreach (Activity activity in Model.Activities)
 {
-    @*<div class="restaurant" id="@activity.Id">*@
-        <div class="restaurant" id="restaurantDivId@(id)">
-            <div class="restaurant_sum_description">
-                <h4>
-                    @activity.Name
-                    <label class="lrating">
-                        @for (int i = 0; i < activity.Rating; i++)
-                        {
-                            <img class="rating" src="~/img/Dinner/Summary/Rating_full.png" width="14" height="17" />
-                        }
-
-                        @for (int i = activity.Rating; i < 5; i++)
-                        {
-                            <img class="rating" src="~/img/Dinner/Summary/Rating_empty.png" width="14" height="17" />
-                        }
-                    </label>
-                </h4>
-                <div class="left_info">
-                    <img src="~/img/Dinner/Summary/002-fork-and-knife-in-cross.svg" width="18" height="18" alt="Cuisine icon" />
-                    @foreach (Cuisine cuisine in activity.Cuisines)
-                {
-                        <label class="lcuisine">@cuisine.Name</label>
+    <div class="restaurant" id="restaurantDivId@(id)">
+        <div class="restaurant_sum_description">
+            <h4>
+                @activity.Name
+                <label class="lrating">
+                    @for (int i = 0; i < activity.Rating; i++)
+                    {
+                        <img class="rating" src="~/img/Dinner/Summary/Rating_full.png" width="14" height="17" />
                     }
 
-                </div>
-                <div class="left_info">
-                    <img src="~/img/Dinner/Summary/001-clock-circular-outline.svg" width="18" height="18" alt="Time icon" />
-                    @for (int i = 0; i < 3; i++)
-                {
-                        <label class="ltime">@activity.Timeslots[i].StartTime.ToShortTimeString() - @activity.Timeslots[i].EndTime.ToShortTimeString()</label>
+                    @for (int i = activity.Rating; i < 5; i++)
+                    {
+                        <img class="rating" src="~/img/Dinner/Summary/Rating_empty.png" width="14" height="17" />
                     }
-                </div>
-
+                </label>
+            </h4>
+            <div class="left_info">
+                <img src="~/img/Dinner/Summary/002-fork-and-knife-in-cross.svg" width="18" height="18" alt="Cuisine icon" />
+                @foreach (Cuisine cuisine in activity.Cuisines)
+                {
+                    <label class="lcuisine">@cuisine.Name</label>
+                }
 
             </div>
-            <div class="restaurant_img_box"><img class="restaurant_img" src=@Model.Page.PageDescriptions[counter].ImageUrl alt="@activity.Name" /></div>
-            <button class="btn_more_info" input="button" onclick="location.href= '@Url.Action("Restaurant", "Dinner", new { id = activity.Id})'" )>More info</button>
-            <button class="btn_booknow">Book now</button>
-        </div>
-        counter++;
-        id++;
-        }
+            <div class="left_info">
+                <img src="~/img/Dinner/Summary/001-clock-circular-outline.svg" width="18" height="18" alt="Time icon" />
+                @for (int i = 0; i < 3; i++)
+                {
+                    <label class="ltime">@activity.Timeslots[i].StartTime.ToShortTimeString() - @activity.Timeslots[i].EndTime.ToShortTimeString()</label>
+                }
+            </div>
 
-        <div class="dinner_description">
-            <h2>@Model.Page.PageDescriptions[1].Title</h2>
-            <p>@Model.Page.PageDescriptions[1].DescriptionText</p>
+
         </div>
+        <div class="restaurant_img_box"><img class="restaurant_img" src=@Model.Page.PageDescriptions[counter].ImageUrl alt="@activity.Name" /></div>
+        <button class="btn_more_info" input="button" onclick="location.href= '@Url.Action("Restaurant", "Dinner", new { id = activity.Id})'" )>More info</button>
+        <button class="btn_booknow" input="button" onclick="location.href= '@Url.Action("Restaurant", "Dinner", new { id = activity.Id})#restaurant_reservation_form'" )>Book now</button>
+    </div>
+    counter++;
+    id++;
+}
