--- a/HaarlemFestival/Views/ContentManagement/Index.cshtml
+++ b/HaarlemFestival/Views/ContentManagement/Index.cshtml
@@ -18,6 +18,7 @@
         @Html.HiddenFor(model => model.Name)
         @Html.HiddenFor(model => model.Title)
         <section class="adminSection col-md-10">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h2>Edit Links</h2>
             @for (int i = 0; i < 4; i++)
             {
