--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -684,10 +684,19 @@ footer {
     text-align: center;
 }
 
-.HistoricIntro button {
+#HistoricButtonOrder1 {
     position: relative;
     bottom: 141px;
     left: 450px;
+    padding: 30px 10px 30px 10px;
+    border-radius: 50%;
+    background-color: limegreen;
+    color: white;
+    border-color: darkslateblue;
+}
+
+#HistoricButtonOrder1:hover, #HistoricButtonOrder1:focus {
+    background-color: lime;
 }
 
 .HistoricRoute h2 {
@@ -714,6 +723,7 @@ footer {
     border-width: 1px;
     margin-top: 5px;
     float: left;
+    margin-bottom: 5px;
 }
 
 .HistoricImageDropMarker1 {
@@ -790,7 +800,7 @@ footer {
     margin-top: 135px;
 }
 
-HistoricButtonBook2 {
+#HistoricButtonOrder2 {
     position: relative;
     bottom: 25px;
     left: 778px;
@@ -864,43 +874,6 @@ section.HistoricRouteInfo {
     margin-left: 5px;
 }
 
-/*
-section.HistoricRouteInfo1 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo2 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo3 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo4 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo5 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo6 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo7 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo8 {
-    width: 100%;
-}
-
-section.HistoricRouteInfo9 {
-    width: 100%;
-}
-*/
 p.HistoricRouteInfo1{
     width: 100%;
 }
@@ -979,6 +952,44 @@ img.HistoricRouteInfo9 {
     top: 368px;
     left: 132px;
 }
+
+/* The Modal (background) */
+.modalHistoric {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-contentHistoric {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.closeHistoric {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+    .closeHistoric:hover,
+    .closeHistoric:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 /*-------------------------------JAZZ---------------------------------*/
 .jazz_page_info_hp {
